2003-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.bench: New file, beginnings of a benchmark suite for the
	  data structure 'struct::tree'.

2003-04-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.man: Changed name to struct_tree.man. Was in conflict with
	  tree manpage of BLT.

2003-04-22  Andreas Kupries  <andreask@activestate.com>

	* graph.man: Switched cgraph reference to a purl supplied by the
	  cgraph author, and added wiki reference.

2003-04-16  Andreas Kupries  <andreask@activestate.com>

	* prioqueue.tcl (__elementcompare): Failures in testsuite fixed,
	  patch provided by original author, Michael Schlenker
	  <mic42@users.sourceforge.net>.

2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* skiplist.man:
	* skiplist.tcl:
	* skiplist.test: New files. Patch #553980 submitted by Eric Melski
	  <ericm@users.sourceforge.net> on behalf of Keith Vetter.

	* prioqueue.tcl:
	* prioqueue.test: New files. Patch #607085 submitted by Michael
	  Schlenker <mic42@users.sourceforge.net>.

2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* tcllib_list.man: Changed name to struct_list.man. Allows for
	  usage of struct outside of tcllib, not as big a coupling.

	* graph.tcl: Redone the setting up of namespace a bit to prevent
	  problem with the generation of a master package
	  index. strcut.tcl bailed out with an error because the namespace
	  was net set up when using [pkg_mkIndex] in this directory.

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test:
	* graph.man:
	* graph.tcl: Added code to look for the C-implementation, cgraph,
	  first, and to fall back to the Tcl implementation if cgraph is
	  not present (#720348). The documentation links to the place
	  where cgraph can be had from. Note presence of cgraph when
	  executing the testsuite.

2003-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
